--- a/.github/workflows/project_ci.yml
+++ b/.github/workflows/project_ci.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
+      with:
+        path: 2023-amse-template
     # Install python
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
