--- a/.github/workflows/project_ci.yml
+++ b/.github/workflows/project_ci.yml
@@ -26,4 +26,4 @@ jobs:
     # Run tests 
     - name: Tests with pytest
       run: |
-        .main/project/testing.sh
+        bash project/testing.sh
