--- a/.github/workflows/project_ci.yml
+++ b/.github/workflows/project_ci.yml
@@ -11,8 +11,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-      with:
-        path: main
+      
     # Install python
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
@@ -26,4 +25,4 @@ jobs:
     # Run tests 
     - name: Tests with pytest
       run: |
-        bash project/testing.sh
+        ./project/testing.sh
