--- a/.github/workflows/project_ci.yml
+++ b/.github/workflows/project_ci.yml
@@ -23,6 +23,9 @@ jobs:
       run: |
         pip install pytest
         pip install pandas
+        pip install dotenv
+        pip install sqlite3
+        
 
     # Run Code Format check
 
