--- a/.github/workflows/project_ci.yml
+++ b/.github/workflows/project_ci.yml
@@ -25,6 +25,7 @@ jobs:
         pip install pandas
         pip install pysqlite3
         pip install python-dotenv
+        pip install requests
         
 
     # Run Code Format check
