--- a/.github/workflows/project_ci.yml
+++ b/.github/workflows/project_ci.yml
@@ -26,6 +26,7 @@ jobs:
         pip install pysqlite3
         pip install python-dotenv
         pip install requests
+        pip install sqlalchemy
         
 
     # Run Code Format check
