--- a/.github/workflows/project_ci.yml
+++ b/.github/workflows/project_ci.yml
@@ -6,8 +6,8 @@ on:
     - main
 
 env: 
-  APIKey: ${{ secrets.APIKey }}
-  ClientID: ${{ secrets.ClientID }}
+  APIKey: '${{ secrets.APIKey }}'
+  ClientID: '${{ secrets.ClientID }}'
 
 jobs:
   project-ci:
