update ci with sklear install

--- a/.github/workflows/project_ci.yml
+++ b/.github/workflows/project_ci.yml
@@ -32,6 +32,7 @@ jobs:
         pip install requests
         pip install sqlalchemy
         pip install lxml
+        pip install scikit-learn
         
 
     # Run Code Format check
